# FurnitureParadise

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
paradise/: pyvenv.cfg
paradise/Scripts/: activate  activate.bat
products/: crud.py  schemas.py  views.py
routers/: items.py
